2005-11-30  Benoît Dejean  <benoit@placenet.org>

	* src/README.hacking:

	Dropped old file.

2005-11-29  Benoît Dejean  <benoit@placenet.org>

	* src/Makefile.am: Removed non-existant file.

2005-11-22  Matthias Clasen  <mclasen@redhat.com>

	* gnome-system-monitor.desktop.in.in: Add Monitor
	and X-Red-Hat-Base to Categories.  (#322130)

2005-11-13  Benoît Dejean  <benoit@placenet.org>

	* NEWS: Released 2.13.2.

2005-11-08  Benoît Dejean  <benoit@placenet.org>

	* src/gnome-system-monitor.schemas.in:
	* src/smooth_refresh.c: (status_changed), (smooth_refresh_new),
	(smooth_refresh_destroy), (smooth_refresh_get):

	Added /apps/procman/smooth_refresh to control behaviour.

2005-11-08  Benoît Dejean  <benoit@placenet.org>

	* src/disks.c: (fsusage_stats), (add_disk), (create_disk_view):

	Added "available" column. Closes #320603.

2005-11-04  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	
	2.13.2.
	
	* src/procman.h:
	* src/proctable.c: (sort_ints), (proctable_new),
	(get_process_memory_writable), (get_process_memory_info),
	(update_info_mutable_cols):
	* src/proctable.h:

	Added "Writable memory" column. I know this is a bit cryptic.

2005-10-29  Benoît Dejean  <benoit@placenet.org>

	* src/favorites.c: (add_single_to_blacklist):
	* src/interface.c: (menu_item_select_cb):
	* src/load-graph.c: (load_graph_unalloc), (load_graph_alloc):
	* src/memmaps.c: (compare_memmaps), (memmaps_timer),
	(create_single_memmaps_dialog):
	* src/openfiles.c: (update_openfiles_dialog), (openfiles_timer),
	(create_single_openfiles_dialog):
	* src/procactions.c: (renice_single_process),
	(kill_single_process):
	* src/procman.c: (color_changed_cb), (procman_get_tree_state),
	(procman_save_tree_state), (procman_save_config), (main):
	* src/proctable.c: (sort_ints), (proctable_free_info),
	(remove_info_from_tree):
	
	Replaced many g_return* with g_assert.

2005-10-27  Benoît Dejean  <benoit@placenet.org>

	* configure.in:

	Oops, forgot to increase version.
