@@ -21,7 +21,7 @@
 
 #include "procman.h"
  
-void		renice (ProcData *procdata, int pid, int nice) G_GNUC_INTERNAL;
+void		renice (ProcData *procdata, int nice) G_GNUC_INTERNAL;
 void		kill_process (ProcData *procdata, int sig) G_GNUC_INTERNAL;
 
 #endif
