@@ -1,3 +1,11 @@
+2005-12-01  Benoît Dejean  <benoit@placenet.org>
+
+	* src/procactions.c: (renice):
+	* src/procactions.h:
+	* src/procdialogs.c: (renice_dialog_button_pressed):
+
+	Droped unused pid argument for renice().
+
 2005-11-30  Benoît Dejean  <benoit@placenet.org>
 
 	* src/README.hacking:
